# mdbsql

./: Cargo.toml  README.md  build.rs
libmdb-sys/: Cargo.toml  build.rs
libmdb-sys/src/: lib.rs
resource/: test.mdb
src/: error.rs  ffi.rs  lib.rs  mdbsql.rs  rusqlite.rs  wrapper.h
