[package]
name = "mdbsql"
version = "0.1.2"
edition = "2021"
description = "SQL query for Access database on Unix-like systems"
readme = "README.md"
keywords = ["access", "mdb", "database", "ffi"]
license = "Apache-2.0"
categories = ["database"]
repository = "https://github.com/ongchi/mdbsql"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "mdbsql"

[dependencies]
serde = "1.0"
serde_plain = "1.0"
thiserror = "1.0"

[build-dependencies]
bindgen = "0.60"
cc = "1.0"
pkg-config = "0.3"
