[package]
name = "mdbsql"
version = "0.1.3"
edition = "2021"
description = "SQL query for Access database on Unix-like systems"
readme = "README.md"
keywords = ["access", "mdb", "database", "ffi"]
license = "Apache-2.0"
categories = ["database"]
repository = "https://github.com/ongchi/mdbsql"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "mdbsql"

[workspace]
members = ["libmdb-sys"]

[dependencies]
serde = "1.0"
serde_plain = "1.0"
thiserror = "1.0"
libmdb-sys = { version = "0.1.0" , path = "./libmdb-sys" }
