[package]
name = "mdbsql"
version = "0.1.7"
edition = "2021"
description = "SQL query for Access database on Unix-like systems"
readme = "README.md"
keywords = ["access", "mdb", "database", "ffi"]
license = "Apache-2.0"
categories = ["database"]
repository = "https://github.com/ongchi/mdbsql"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "mdbsql"

[workspace]
members = ["libmdb-sys"]

[features]
default = []
rusqlite = ["dep:rusqlite"]

[build-dependencies]
pkg-config = "0.3"
version-compare = "0.1"

[dependencies]
glib-sys = "0.16"
libc = "0.2"
libmdb-sys = { version = "0.1.2", path = "libmdb-sys" }
pkg-config = "0.3"
rusqlite = { version = "0.28.0", optional = true }
serde = "1.0"
serde_plain = "1.0"
thiserror = "1.0"
