[package]
name = "libmdb-sys"
version = "0.1.2"
edition = "2021"
description = "Native bindings to the libmdb/libmdbsql library"
license = "Apache-2.0"
keywords = ["libmdb", "libmdbsql", "ffi"]
categories = ["external-ffi-bindings"]

[build-dependencies]
bindgen = "0.65"
pkg-config = "0.3"

[dependencies]
glib-sys = "0.16"
libc = "0.2"
